--- a/src/Css/historial.module.css
+++ b/src/Css/historial.module.css
@@ -10,6 +10,9 @@
     font-size: 2.3rem;
 }
 
+.borrartodo{
+    width: 20%;
+}
 
 li{
     padding: 30px 40px;
@@ -36,9 +39,9 @@ ul{
     gap: 10px;
     margin: auto;
     width: 90%;
+    height: 60%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     flex-direction: column;
 
 }
